docs/tests/syntax/bad/testfile-for1-1.cpp
void m() { int i; for( ; ; true; i++) ; }
